--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 			</div>
 		</header>
 		<hr>
-
+<div class="row">
+  <div class="col-md-12">
 				<section class="main-image">
 					<img src="img/code.jpg" alt="code" class="main">
 				</section>
+      </div>
+    </div>
 		<div class="row">
 			<div class="col-md-12">
 				<h2 class="header2">Featured Work</h2>
